--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,17 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Set up sqlc
+        uses: sqlc-dev/setup-sqlc@v3
+        with:
+          sqlc-version: "1.30.0"
+
+      - name: sqlc vet
+        run: sqlc vet
+
+      - name: sqlc diff
+        run: sqlc diff
+
       - name: Verify formatting
         run: |
           fmt_out=$(gofmt -l .)
